Update Versions.java on adding new versions

1.1.0
New feature: `Math`
New feature: `FontTexture`
New feature: `FontTextures`
New feature: `Drawable`
New feature: `DrawableText`
Changed: `ShaderReader` and `MeshLoader` use UTF-8 not ANSI now
Changed: Rename `Window` to `GLFWindow`

1.0.0
Release
New feature: More docs
New feature: `Versions`
New feature: `Window`
New feature: `Framebuffer`
Changed: Rename `MeshVar` to `MeshMacro`
Changed: Rename `idxVbo` to `ibo`
Changed: `ShaderType#toString`: "vertexShader" -> "vertex shader"
Changed: `BaseMesh#colorVbo` is not final now

0.9.0
Beta
Fixed a bug: `GLUtils.VERSION` was 0.7.0
New feature: `ArrayHelper.toIArray`
New feature: `ArrayHelper.expand`
New feature: `GLUtils.isOlder`
New feature: `GLUtils.isNewer`
New feature: `GLUtils.isEqual`
Changed: Move `*Mesh*` to [base pkg].mesh

0.8.0
Fixed a bug: `AtlasLoomSTB` was flipping
Fixed a bug: Can't compile `AtlasLoomSTB`
Changed: Public dependencies

0.7.0
New feature: ArrayHelper
New feature: CompileException
New feature: FloatArray
New feature: IntArray
New feature: MapStr2Str
New feature: MeshFile
New feature: MeshLoader
New feature: MeshVar

0.6.1
Fixed Javadoc
0.6.0
Alpha
Removed: Mesh builder
New feature: `BaseMesh`

0.5.0
New feature: Bind JOML now
New feature: Package math
Changed: `AtlasLoom#load` returns int now
Deprecated: Mesh builder

0.4.0
New feature: GLString
New feature: StbImg
New feature: AWTImage
New feature: `GLProgram#setUniform*`
Changed: `IMesh#*Size` -> `IMesh#*Dim`
Changed: Split `AtlasLoom` into `-AWT` and `-STB`
Changed: `AtlasLoom` must construct by name
Fixed a bug: `IMesh#texDim` is 3

0.3.0
New feature: Developers can load texture by int array
New feature: Developers can generate image atlas by `AtlasLoom`
New feature: `GLProgram#vertexAttribPointer`
Fixed a fatal bug: Program crashed when creating shaders
    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.\\0